[package]
name = "heisenpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
warp = "0.3"
rust-embed = "6.3.0"
mime_guess = "2.0.3"
serde_json = "1.0"
